$Id: ChangeLog,v 1.186 2005-12-01 15:31:15 peterlin Exp $

2005-12-01  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSerifItalic.sfd: added U+0183, U+018C, U+01C0, U+01C1,
	U+01C3, U+01E0, U+01E1, U+01F8, U+01F9.
	
	* Makefile: created a Makefile to assist building.

	* README: an update.

	* COPYING: added GNU General Public License, version 2.

	* tools/GenerateTrueType: wrote a FontForge script for conversion
	to TrueType.

	* sfd/FreeSerif.sfd: merged with SolaimanLipi Bangla OpenType font
	from www.ekushey.org, courtesy Solaiman Karim.

	* sfd/FreeSerifItalic.sfd: merged with SolaimanLipi Bangla
	OpenType font from www.ekushey.org, slanted by 15.5 degrees.

	* sfd/FreeSans.sfd: merged with Rupali Bangla OpenType font from
	www.ekushey.org

	* sfd/FreeSansOblique.sfd: merged with Rupali Bangla OpenType font from
	www.ekushey.org, slanted by 12 degrees.

	* CREDITS: added Solaiman Karim

	* AUTHORS: added Solaiman Karim

2005-11-30  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSerif.sfd: merged with the Rachana Normal.

	* AUTHORS: added K.H. Hussain and R. Chitrajan

	* CREDITS: added K.H. Hussain and R. Chitrajan

2005-11-23  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSans.sfd - cleaned some background images.

	* sfd/FreeSans.sfd - added U+01A0-01A1, U+01AF-01B0, U+026E,
	U+028F, U+0291, U+02A3-02A5, U+031B. Modified U+0198.

2005-11-22  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSans.sfd - added U+2504-250B.

	* sfd/FreeSans.sfd - added U+2591-25A1, U+25A3-25A5, U+25AA, U+25AC.

	* sfd/FreeSans.sfd, sfd/FreeSansBold.sfd - added U+0263.
	
2005-11-21  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeMono.sfd - corrected positions of some Greek diacritics
	on page 0x1F.

	* sfd/FreeMonoOblique.sfd - working on bringing it in sync with
	FreeMono.sfd.

	* sfd/FreeSerifBoldItalic.sfd - applied the sequence suggested by